2003-08-03  Carlos Perelló Marín <carlos@gnome.org>

	* src/*.c: Small bug-fixes, now it seems that works (the xml load).
	I will start now the .po management.

2003-08-03  Carlos Perelló Marín <carlos@gnome.org>

	* AUTHORS: Added with my name as required by automake.
	* configure.ac: We need always latest intltool release (0.26 now).
	Added a check for the popt library
	* .cvsignore: Updated
	* src/Makefile.am: Added the popt libraries.
	* src/status*[ch]: Fixed small bugs, now it build!!

2003-08-03  Carlos Perelló Marín <carlos@gnome.org>

	* COPYING, Makefile.am, NEWS, README, autogen.sh, configure.ac,
	data/Makefile.am, doc/Makefile.am, po/POTFILES.in, src/Makefile.am:
	Imported the initial autoconf/automake support.

2003-08-03  Carlos Perelló Marín <carlos@gnome.org>

	* src/main.c: Added, we can now start to test the .xml reading and
	the object implementation.
	* src/status-xml.c: The Hash tables can free the memory automaticly
	when we don't need them anymore.

2003-08-03  Carlos Perelló Marín <carlos@gnome.org>

	* src/status.h, src/status-xml.c: The new xml parser module.
	* src/status-view.c: Added support for groups.
	* data/status-gnome.xml: Added an example for the new .xml file format
	
2003-07-27  Carlos Perelló Marín <carlos@gnome.org>

	* src/status-view.[ch]: Added the view object.

2003-07-26  Carlos Perelló Marín <carlos@gnome.org>

	* src/status-server.[ch]: Added, we will have only cvs server, but
	in the future we could add FTP, WEB, Subversion and other sources
	* src/status-version.[ch], src/status-module.[ch]: Small changes.

2003-06-09  Carlos Perelló Marín <carlos@gnome.org>

	* Started the improved new "big" project called status pages.
	* translation-status.*, ChangeLog: Moved to data subdir to
	sort all files.
	* doc/Design: Added a file that will have all requests and features
	that we will implement.
	* src/status-module.[ch]: Added, will handle the module Objects