@@ -1,5 +1,12 @@
 2003-08-03  Carlos Perelló Marín <carlos@gnome.org>
 
+	* src/status-server.[ch], src/status-version.[ch]: Fixed to be able
+	to download the CVS modules correctly.
+	* src/main.c: Implemented the function to download all versions.
+	* Next feature... .pot name discover!!!
+
+2003-08-03  Carlos Perelló Marín <carlos@gnome.org>
+
 	* src/*.c: Small bug-fixes, now it seems that works (the xml load).
 	I will start now the .po management.
 
